header spacial styling

--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <title>Share Space</title>
   </head>
   <body>
-
     <div class="header">
-      <h2>share space</h2>
-      <h5>modern air plant funky cool luxury, artist post-ironic</h5>
-      <h4>503.000.0123</h4>
-    </div>
-
-    <div class="essentials-resources">
-      <div class="essentials">
-        <h4>office essentials</h4>
-        <p>24/7 access to a desk, chair, wifi, printer, and mail  services. Small office members receive a larger desk, locking file cabinet, and desk lamp, too.</p>
+      <div class="header-content">
+        <h2>share space</h2>
+        <h5>modern air plant funky cool luxury, artist post-ironic</h5>
+        <h4>503.000.0123</h4>
       </div>
-      <div class="resources">
-        <h2>shared resources</h2>
-        <p>Grab a book, paper samples, pens, markers, staplers and other office basics while you're here. What's Shared is yours!</p>
+
+      <div class="essentials-resources">
+        <div class="essentials">
+          <h4>office essentials</h4>
+          <p>24/7 access to a desk, chair, wifi, printer, and mail  services. Small office members receive a larger desk, locking file cabinet, and desk lamp, too.</p>
+        </div>
+        <div class="resources">
+          <h2>shared resources</h2>
+          <p>Grab a book, paper samples, pens, markers, staplers and other office basics while you're here. What's Shared is yours!</p>
+        </div>
       </div>
     </div>
 
