class changes to index.html

--- a/index.html
+++ b/index.html
@@ -51,16 +51,14 @@
     </div>
 
     <div class="common-area">
-      <img src="#" alt="">
+      <img src="./img/common-area1.png" alt="common area with table and chairs in fictional share space">
     </div>
 
-    <div>
-      <ul class="amenities">
-        <li>on-site coffee counter</li>
-        <li>communal working areas and private offices</li>
-        <li>high-speed internet</li>
-        <li>printing and faxing services</li>
-      </ul>
+    <div class="amenities">
+      <p>on-site coffee counter</p>
+      <p>communal working areas and private offices</p>
+      <p>high-speed internet</p>
+      <p>printing and faxing services</p>
     </div>
 
     <div class="image-display">
@@ -76,12 +74,13 @@
     </div>
 
     <div>
-      <ul class="thursday">
-        <li>massage</li>
-        <li>yoga</li>
-        <li>juggling</li>
-        <li>catered lunch</li>
-        <li>crafting activities</li>
+      <ul class="amenities">
+        <h6>member events every thursday</h6>
+        <p>massage</p>
+        <p>yoga</p>
+        <p>juggling</p>
+        <p>catered lunch</p>
+        <p>crafting activities</p>
       </ul>
     </div>
 
