moves variables into variables file

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
       </div>
 
       <div class="coffee">
-        <img src="./img/cofee.jpg" alt="three lattes surrounded by green plants">
+        <img src="./img/coffee.jpg" alt="three lattes surrounded by green plants">
       </div>
 
       <div class="lounge">
-        <img src=".img/meeting-area-small.png" alt="the loung style meeting area at share space">
+        <img src="./img/meeting-area-small.png" alt="the loung style meeting area at share space">
       </div>
 
     </div>
