change base styling

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <div class="header">
       <div class="header-content">
-        <h2>share space</h2>
-        <h5>modern air plant funky cool luxury, artist post-ironic</h5>
+        <h1>share space</h1>
+        <p>modern air plant funky cool luxury, artist post-ironic</p>
         <h4>503.000.0123</h4>
       </div>
 
@@ -73,7 +73,7 @@
       </div>
 
       <div class="lounge">
-        <img src="./img/meeting-area-small.png" alt="the loung style meeting area at share space">
+        <img src="./img/meeting-area-small.png" alt="the loung-style meeting area at share space">
       </div>
 
     </div>
