mobile styling of header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="header">
       <div class="header-content">
         <h1>share space</h1>
-        <p>modern air plant funky cool luxury, artist post-ironic</p>
+        <h5>modern air plant funky cool luxury, artist post-ironic</h5>
         <h4>503.000.0123</h4>
       </div>
 
@@ -19,8 +19,8 @@
           <p>24/7 access to a desk, chair, wifi, printer, and mail  services. Small office members receive a larger desk, locking file cabinet, and desk lamp, too.</p>
         </div>
         <div class="resources">
-          <h2>shared resources</h2>
-          <p>Grab a book, paper samples, pens, markers, staplers and other office basics while you're here. What's Shared is yours!</p>
+          <h4>shared resources</h4>
+          <p>Grab a book, paper samples, pens, markers, staplers and other office basics while you're here. What's <strong>Shared</strong> is yours!</p>
         </div>
       </div>
     </div>
