align and style form about

--- a/index.html
+++ b/index.html
@@ -28,18 +28,19 @@
     <div class="form-about">
       <div class="form-container">
         <div class="form">
-          <h2>come check us out</h2>
-          <label for="first-name">first name</label>
-          <input type="text" name="first-name" value="first-name">
-          <label for="last-name">last name</label>
-          <input type="text" name="last-name" value="last-name">
-          <label for="email">email address</label>
-          <input type="text" name="email" value="email">
-          <label for="phone">phone number</label>
-          <input type="text" name="phone" value="phone">
+          <h3>come check us out</h3>
+          <label for="first-name">first name</label><br>
+          <input type="text" name="first-name"><br>
+          <label for="last-name">last name</label><br>
+          <input type="text" name="last-name"><br>
+          <label for="email">email address</label><br>
+          <input type="text" name="email"><br>
+          <label for="phone">phone number</label><br>
+          <input type="text" name="phone"><br>
           <button type="submit" name="button">schedule tour</button>
         </div>
       </div>
+
       <div class="about">
         <p>Share Space is a place to create, connect, grow, get inspired, get shit done. Come renew your spirit, and celebrate being an ambitious human.<br>
         In our world, we are empowered to define our futures, and we are all living full, satisfying, courageous lives.<br>
@@ -47,19 +48,24 @@
       </div>
     </div>
 
-    <div class="free-trial">
-      <button type="button" name="button">free trial</button>
+    <div class="col-align">
+      <div class="free-trial">
+        <button type="button" name="button">free trial</button>
+      </div>
     </div>
 
-    <div class="common-area">
-      <img src="./img/common-area1.png" alt="common area with table and chairs in fictional share space">
+    <div class="col-align">
+      <div class="common-area">
+        <img src="./img/common-area1.png" alt="common area with table and chairs in fictional share space">
+      </div>
     </div>
-
-    <div class="amenities">
-      <p>on-site coffee counter</p>
-      <p>communal working areas and private offices</p>
-      <p>high-speed internet</p>
-      <p>printing and faxing services</p>
+    <div class="col-align">
+      <div class="amenities">
+        <p>on-site coffee counter</p>
+        <p>communal working areas and private offices</p>
+        <p>high-speed internet</p>
+        <p>printing and faxing services</p>
+      </div>
     </div>
 
     <div class="image-display">
