add additional style to amenities

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Share Space</title>
   </head>
   <body>
+
     <div class="header">
+
       <div class="header-content">
         <h1>share space</h1>
         <h5>modern air plant funky cool luxury, artist post-ironic</h5>
@@ -18,17 +20,19 @@
           <h4>office essentials</h4>
           <p>24/7 access to a desk, chair, wifi, printer, and mail  services. Small office members receive a larger desk, locking file cabinet, and desk lamp, too.</p>
         </div>
+
         <div class="resources">
           <h4>shared resources</h4>
           <p>Grab a book, paper samples, pens, markers, staplers and other office basics while you're here. What's <strong>Shared</strong> is yours!</p>
         </div>
       </div>
+
     </div>
 
     <div class="form-about">
       <div class="form-container">
         <div class="form">
-          <h3>come check us out</h3>
+          <h3>check us out</h3>
           <label for="first-name">first name</label><br>
           <input type="text" name="first-name"><br>
           <label for="last-name">last name</label><br>
@@ -54,11 +58,10 @@
       </div>
     </div>
 
-    <div class="col-align">
-      <div class="common-area">
-        <img src="./img/common-area1.png" alt="common area with table and chairs in fictional share space">
-      </div>
+    <div class="common-area">
+      <img src="./img/common-area1.png" alt="common area with table and chairs in fictional share space">
     </div>
+
     <div class="col-align">
       <div class="amenities">
         <p>on-site coffee counter</p>
@@ -84,15 +87,13 @@
 
     </div>
 
-    <div>
-      <ul class="amenities">
-        <h6>member events every thursday</h6>
-        <p>massage</p>
-        <p>yoga</p>
-        <p>juggling</p>
-        <p>catered lunch</p>
-        <p>crafting activities</p>
-      </ul>
+    <div class="amenities">
+      <h6>member events every thursday</h6>
+      <p>massage<br>
+      yoga<br>
+      juggling<br>
+      catered lunch<br>
+      crafting activities</p>
     </div>
 
     <div class="pricing">
