correct amenities text alignment

--- a/index.html
+++ b/index.html
@@ -62,13 +62,11 @@
       <img src="./img/common-area1.png" alt="common area with table and chairs in fictional share space">
     </div>
 
-    <div class="col-align">
-      <div class="amenities">
-        <p>on-site coffee counter</p>
-        <p>communal working areas and private offices</p>
-        <p>high-speed internet</p>
-        <p>printing and faxing services</p>
-      </div>
+    <div class="amenities">
+      <p>on-site coffee counter</br>
+      communal working areas and private offices</br>
+      high-speed internet</br>
+      printing and faxing services</p>
     </div>
 
     <div class="image-display">
@@ -88,8 +86,8 @@
     </div>
 
     <div class="amenities">
-      <h6>member events every thursday</h6>
-      <p>massage<br>
+      <p><span class="thursday">member events every thursday</span></br>
+      massage<br>
       yoga<br>
       juggling<br>
       catered lunch<br>
