positioning of image blocks

--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
 
     <div class="image-display">
 
-      <div class="worker">
-        <img src="./img/dude.jpg" alt="entrepreneur working at share space">
+      <div>
+        <img class="worker" src="./img/dude.jpg" alt="entrepreneur working at share space">
       </div>
 
-      <div class="coffee">
-        <img src="./img/coffee.jpg" alt="three lattes surrounded by green plants">
+      <div>
+        <img class="coffee" src="./img/coffee.jpg" alt="three lattes surrounded by green plants">
       </div>
 
-      <div class="lounge">
-        <img src="./img/meeting-area-small.png" alt="the loung-style meeting area at share space">
+      <div>
+        <img class="lounge" src="./img/meeting-area-small.png" alt="the loung-style meeting area at share space">
       </div>
 
     </div>
