--- a/index.html
+++ b/index.html
@@ -109,29 +109,28 @@
     </div>
 
     <div class="contact">
-      <div class="map">
-        <img src="#" alt="">
+      <div>
+        <img class="map" src="./img/map.png" alt="">
       </div>
 
       <div class="info">
-        <h4 class="gold">find the revolution</h4>
-        <p>481516 se hazel st <br>
+        <p><span class="gold">find the revolution</span><br>
+        481516 se hazel st <br>
         portland, or 97214</p>
         <hr>
-        <h4 class="blush">nearby food and drink</h4>
-        <ul class="food">
-          <li>ford food &amp; drink</li>
-          <li>double dragon</li>
-          <li>genies</li>
-          <li>los gorditos</li>
-          <li>double barrel</li>
-        </ul>
+      <div class="blush">
+        <p><span class="food">nearby food and drink</span></br>
+        ford food &amp; drink</br>
+        double dragon</br>
+        genies</br>
+        los gorditos</br>
+        double barrel</p>
       </div>
     </div>
 
     <div class="pre-footer">
       <div class="share-space">
-        <h2>share space</h2>
+        <h1>share space</h1>
       </div>
 
       <div class="contact-info">
@@ -140,13 +139,13 @@
       </div>
 
       <div class="mustard-exploitation">
-        <img src="#" alt="">
+        <img src="./img/mustard.png" alt="mustard stamp">
         <p>friendly dogs welcome</p>
       </div>
     </div>
     <div class="footer">
       <div class="footer-text">
-        <h2>fierce | bold | heart</h2>
+        <h2>fierce <span class="gold">|</span> bold <span class="gold">|</span> heart</h2>
         <h3>enough love for ourselves and each other</h3>
       </div>
     </div>
