add madding to borders, shadows to buttons

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
       <div class="essentials-resources">
         <div class="essentials">
-          <h4>office essentials</h4>
-          <p>24/7 access to a desk, chair, wifi, printer, and mail  services. Small office members receive a larger desk, locking file cabinet, and desk lamp, too.</p>
+          <p><span class="bigger">office essentials</span></br>
+          24/7 access to a desk, chair, wifi, printer, and mail  services. Small office members receive a larger desk, locking file cabinet, and desk lamp, too.</p>
         </div>
 
         <div class="resources">
-          <h4>shared resources</h4>
-          <p>Grab a book, paper samples, pens, markers, staplers and other office basics while you're here. What's <strong>Shared</strong> is yours!</p>
+          <p><span class="bigger">shared resources</span></br>
+          Grab a book, paper samples, pens, markers, staplers and other office basics while you're here. What's <strong>Shared</strong> is yours!</p>
         </div>
       </div>
 
